=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.016 - Under Development

=over

=item *

Fixed bug in Krang::ElementClass which would fail to setup
"is_$element" template vars if "$element" wasn't used as a template
var itself. [Matt]

=item *

Changed site editor to allow colons so that port numbers can be
specified for preview URLs. [Perrin]

=item *

Synchronized Devel-StackTrace with latest from CPAN, so that we are
now using the standard release. [Perrin]

=item *

t/group.t now uses Krang::Test::Content to generate random content,
rather than bin/krang_floodfill. [Peter]

=item *

More comprehensive FreeBSD support.  Krang now works on FreeBSD 4.9
and 5.2.1, and should work on versions between and previous to that
(as long as the appropriate dependencies are in place).  [Peter]

=item *

ftpserver.t now uses Krang::Test::Content.  Simplifies cleanup, and
fixes a bug where ftpserver tests would fail if krang_install used the
--AdminPassword argument (a user is now created for the purposes of
testing). [Peter]

=item *

Added Krang::User creation/destruction to Krang::Test::Content -
furthering the goal that Krang::Test::Content should be able to create
all parts of a site randomly, and clean up everything properly at the
end. [Peter]

=item *

Modified Krang::Contrib::deserialize_xml() to create contributor types
as needed.  [Sam]

=item *

Changed Krang::ElementClass::Date to store and load data in XML using
an ISO-8601 date-time format. Also added missing template_data()
method.  [Sam]

=item *

Added support for Debian. [Jason Purdy]

=item *

Fixed bug where clicking on a media link in the element editor would
open a new window every time. [Sam]

=item *

Moved code to run tests from Makefile into bin/krang_test.  This
allows krang_install to affect which Perl binary runs the tests. It
also helps with BSD portability since the test target didn't work with
BSD make. [Sam]

=back
